flux/additional-examples/app-with-affinity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-affinity-http
  namespace: demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: app-affinity
  sessionAffinity: None
  type: ClusterIP
