flux/additional-examples/app-with-affinity/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-affinity-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app-affinity.127.0.0.1.xip.io
    http:
      paths:
      - path: /hello
        backend:
          serviceName: app-affinity-http
          servicePort: http
